--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,18 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="133dp"
-        android:layout_height="0dp"
+        android:layout_width="179dp"
+        android:layout_height="101dp"
         android:layout_marginTop="81dp"
         android:layout_marginBottom="41dp"
         android:gravity="center"
         android:text="Bem vindo"
-        android:textColor="#100909"
+        android:textColor="#EFE1E1"
         android:textColorHint="#0C0909"
-        android:textSize="20sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/TextLogin"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,6 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
+        android:background="@drawable/logincertin"
+        android:backgroundTint="#F6EBEB"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
@@ -58,6 +61,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
+        android:background="@drawable/logincertin"
+        android:backgroundTint="#F1EAEA"
         android:ems="10"
         android:hint="Email"
         android:inputType="text"
@@ -87,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:text="Ainda não e cadastrado?"
-        android:textColor="#120B0B"
+        android:textColor="#EDDEDE"
         android:textColorHint="#0B0606"
         app:layout_constraintBottom_toTopOf="@+id/buttonCadastro"
         app:layout_constraintEnd_toEndOf="@+id/buttonCadastro"
