--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="44dp"
         android:text="Realize seu cadastro abaixo"
-        android:textColor="#0B0707"
+        android:textColor="#EDE9E9"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:background="@drawable/logincertin"
+        android:backgroundTint="#ECE9E9"
         android:ems="10"
         android:hint="Usuario"
         android:inputType="text"
@@ -39,6 +41,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
+        android:background="@drawable/logincertin"
+        android:backgroundTint="#F8F3F3"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -53,6 +57,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:background="@drawable/logincertin"
+        android:backgroundTint="#FDF4F4"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
