--- a/app/src/main/res/layout/activity_pagina_inicial.xml
+++ b/app/src/main/res/layout/activity_pagina_inicial.xml
@@ -3,22 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fundo"
     tools:context=".PaginaInicial">
 
     <Button
-        android:id="@+id/button_add_product"
+        android:id="@+id/button_Adicionar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Adicionar Produto"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:onClick="AdicionarProduto"
+        android:text="AdicionarProduto" />
 
     <ListView
         android:id="@+id/listview_products"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/button_add_product"
+        android:layout_below="@+id/button_Adicionar"
         android:layout_marginTop="16dp" />
 
 </RelativeLayout>
