--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -6,10 +6,16 @@
     android:background="@drawable/fundo"
     tools:context=".AddProductActivity">
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="#525555" />
+
     <EditText
         android:id="@+id/edittext_product_name"
-        android:layout_width="372dp"
-        android:layout_height="46dp"
+        android:layout_width="374dp"
+        android:layout_height="64dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
@@ -22,8 +28,8 @@
 
     <EditText
         android:id="@+id/edittext_product_price"
-        android:layout_width="372dp"
-        android:layout_height="44dp"
+        android:layout_width="370dp"
+        android:layout_height="61dp"
         android:layout_below="@+id/edittext_product_name"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
@@ -40,8 +46,9 @@
         android:id="@+id/button_save_product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Salvar Produto"
         android:layout_below="@+id/edittext_product_price"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#525555"
+        android:text="Salvar Produto" />
 </RelativeLayout>
