--- a/app/src/main/res/layout/activity_pagina_inicial.xml
+++ b/app/src/main/res/layout/activity_pagina_inicial.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#4E4B4B"
         android:onClick="AdicionarProduto"
         android:text="AdicionarProduto" />
 
